--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.16.4",
     "express-graphql": "^0.7.1",
     "graphql": "^14.2.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.5.1"
   },
   "devDependencies": {
